--- a/NPP_Plugin_Darkmode/NPP_Plugin_Darkmode.vcxproj
+++ b/NPP_Plugin_Darkmode/NPP_Plugin_Darkmode.vcxproj
@@ -166,7 +166,8 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>START /MIN /D ..\ copy$(Platform).cmd</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -226,7 +227,8 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>START /MIN /D ..\ copy$(Platform).cmd</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
@@ -250,7 +252,8 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>START /MIN /D ..\ copy$(Platform).cmd</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -258,19 +261,14 @@
     <ClInclude Include="IatHook.h" />
     <ClInclude Include="Notepad_plus_msgs.h" />
     <ClInclude Include="NppDarkMode.h" />
-    <ClInclude Include="NppParameters.h" />
     <ClInclude Include="NPP_Plugin_Darkmode.h" />
-    <ClInclude Include="resource.h" />
-    <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DarkMode.cpp" />
-    <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="dllMain.cpp" />
     <ClCompile Include="NppDarkMode.cpp" />
-    <ClCompile Include="NppParameters.cpp" />
     <ClCompile Include="NPP_Plugin_Darkmode.cpp" />
-    <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
