--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 6
       matrix:
-        build_configuration: [Release, Debug]
+        build_configuration: [Release]
         build_platform: [x64, Win32, ARM64]
 
     steps:
