--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -13,7 +13,7 @@ jobs:
       max-parallel: 6
       matrix:
         build_configuration: [Release]
-        build_platform: [x64, Win32]
+        build_platform: [x64, Win32, ARM64]
 
     steps:
     - name: Checkout repo
